Added more descriptions

--- a/Week_02_Audio_Content_Analysis_Assignment.ipynb
+++ b/Week_02_Audio_Content_Analysis_Assignment.ipynb
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -79,7 +79,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -111,7 +111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -150,7 +150,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "tBw3f4xMtRg3"
       },
@@ -177,7 +177,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -217,7 +217,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "-O6i3Lq8tRhC",
         "outputId": "85e24455-fd97-4fc3-96d7-30b52289a4dd",
@@ -312,7 +312,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -549,7 +549,9 @@
         "id": "a_rLb3UjtRhQ"
       },
       "source": [
-        "## Q5 Finding Chord using Chromagram"
+        "## Q5 Finding Chord using Chromagram\n",
+        "\n",
+        "Draw the Chromagram and identify the highlighted notes. Search the internet to find the chord that is composed of the highlighted notes."
       ]
     },
     {
